Prevent side scrolling on mobile devices
Remove margin from pre tags to save some place with code examples. This
also removed an issue adding side scrolling to mobile view.

--- a/source/_compass/sass/_layout/_components.scss
+++ b/source/_compass/sass/_layout/_components.scss
@@ -160,6 +160,14 @@ table.highlighttable {
     overflow: scroll;
     width: 100%;
     display: block;
+
+    @media screen and (max-width: 875px) {
+        margin: 0;
+
+        pre {
+            margin: 0;
+        }
+    }
 }
 
 // This selector is necessary, to overwrite original weight.
